<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbarUnderline"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUnderline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/themeSwitchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_notiTitle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/config_menuTextSize"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/img_notibar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/themeSetSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumb="@drawable/switch_thumb"
                        app:track="@drawable/switch_track_selector"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/themeSwitchLayoutUnderLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLine"
                    app:layout_constraintTop_toBottomOf="@+id/themeSwitchLayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/reviewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/themeSwitchLayoutUnderLine">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_reviewTitle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/config_menuTextSize"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/img_star"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/reviewLayoutUnderLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLine"
                    app:layout_constraintTop_toBottomOf="@+id/reviewLayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recommendLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reviewLayoutUnderLine">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_recommendTitle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/config_menuTextSize"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/img_recommend"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/recommendLayoutUnderLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLine"
                    app:layout_constraintTop_toBottomOf="@+id/recommendLayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tutorailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recommendLayoutUnderLine">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_tutorialTitle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/config_menuTextSize"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/img_help"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/tutorailLayoutUnderLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLine"
                    app:layout_constraintTop_toBottomOf="@+id/tutorailLayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/customerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tutorailLayoutUnderLine">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_customerTitle"
                        android:textColor="@color/colorTextDark"
                        android:textSize="16sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/img_help"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/customerLayoutUnderLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorLine"
                    android:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/customerLayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/versionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customerLayoutUnderLine">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_versionTitle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/config_menuTextSize"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/img_version"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/versionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/config_menuTextSize"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/versionLayoutUnderLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLine"
                    app:layout_constraintTop_toBottomOf="@+id/versionLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>